--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -301,7 +301,7 @@ To apply, visit our website at <a href="https://alwiutmun.weebly.com">https://al
                         <i class="fas fa-ellipsis-v"></i>
                     </span>
                         <ul class="dropdown-menu dropdown-menu-right">
-                            <li><a href="#">Complain</a></li>
+                            <li><a href="#">Fuck you</a></li>
                             <li><a href="#">Edit</a></li>
                             <li><a href="#">Delete</a></li>
                         </ul>
