--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -2,7 +2,8 @@
 <html lang="ru">
 
 <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <meta http-equiv="Content-Type" content="text/html">
+    <!--charset=UTF-8"-->
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
@@ -357,7 +358,7 @@ To apply, visit our website at <a href="https://alwiutmun.weebly.com">https://al
 
                                 <div class="pswp__top-bar">
 
-
+<!--hello blya-->
                                     <div class="pswp__counter"></div>
 
                                     <button class="pswp__button pswp__button--close" title="Close (Esc)"></button>
@@ -551,7 +552,7 @@ To apply, visit our website at <a href="https://alwiutmun.weebly.com">https://al
                                         </li>
                                         <li class="list-group-item">
                                             <div class="checkbox">
-                                                <label>
+                            <label>
                                 <input type="checkbox" value="">    Зеленая миля (1999)
                             </label>
                                             </div>
