Some minor changes

--- a/src/main/webapp/WEB-INF/community.html
+++ b/src/main/webapp/WEB-INF/community.html
@@ -61,7 +61,7 @@
                             Home</a>
                         </li>
                         <li class="">
-                            <a data-toggle="tabs" href="edu.html">
+                            <a data-toggle="tabs" href="../edu.html">
                             <i class="fas fa-graduation-cap"></i>
                             Education</a>
                         </li>
