--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -58,7 +58,7 @@
                             Home</a>
                         </li>
                         <li class="">
-                            <a data-toggle="tabs" href="WEB-INF/edu.html">
+                            <a data-toggle="tabs" href="edu.html">
                             <i class="fas fa-graduation-cap"></i>
                             Education</a>
                         </li>
