Front end:   headers all the same   education split

--- a/src/main/webapp/WEB-INF/events.html
+++ b/src/main/webapp/WEB-INF/events.html
@@ -9,14 +9,14 @@
     <title>Lawn</title>
 
     <!-- Bootstrap -->
-    <link href="../css/bootstrap.min.css" rel="stylesheet">
-    <link href="../css/main.css" rel="stylesheet">
-    <link href="../css/swiper.min.css" rel="stylesheet">
-    <link href="../css/all.css" rel="stylesheet">
-    <link rel="stylesheet" href="../css/posts-template.css">
-    <link rel="stylesheet" href="../css/photoswipe.css">
-    <link rel="stylesheet" href="../css/default-skin/default-skin.css">
-    <link rel="stylesheet" href="../css/events.css">
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/main.css" rel="stylesheet">
+    <link href="css/swiper.min.css" rel="stylesheet">
+    <link href="css/all.css" rel="stylesheet">
+    <link rel="stylesheet" href="css/posts-template.css">
+    <link rel="stylesheet" href="css/photoswipe.css">
+    <link rel="stylesheet" href="css/default-skin/default-skin.css">
+    <link rel="stylesheet" href="css/events.css">
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -44,20 +44,21 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <img src="http://localhost:8080/" alt="">
-                    <a class="navbar-brand" href="../index.html">LAWN</a>
-                    <a class="myacc visible-xs" href="Account"><i class="fas fa-user-circle"></i></a>
+                    <a class="navbar-brand" href="index.html">LAWN</a>
+                    <a class="myacc visible-xs" href="login.html">
+                    <i class="fas fa-user-circle"></i>    
+                    </a>
                 </div>
                 <!-- Collect the nav links, forms, and other content for toggling -->
                 <div class="collapse navbar-collapse" id="navbarCollapse">
                     <ul class="nav navbar-nav navbar-right container-fluid">
-                        <li class="">
-                            <a data-toggle="tabs" href="../index.html">
+                        <li class="active">
+                            <a data-toggle="tabs" href="index.html">
                             <i class="fas fa-home"></i>
                             Home</a>
                         </li>
                         <li class="">
-                            <a data-toggle="tabs" href="../edu.html">
+                            <a data-toggle="tabs" href="edu_schedule.html">
                             <i class="fas fa-graduation-cap"></i>
                             Education</a>
                         </li>
@@ -72,10 +73,25 @@
                             Album</a>
                         </li>
                         <li class="hidden-xs">
-                            <a data-toggle="tabs" href="http://localhost:8080/#">
+                            <a data-toggle="tabs" href="login.html">
                             <i class="fas fa-user-circle"></i>
                             Sign In</a>
                         </li>
+                        <li class="dropdown ">
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+                             <i class="fas fa-cog"></i>
+                             Settings
+                             <span class="caret"></span></a>
+                            <ul class="dropdown-menu">
+                              <li><a href="#">My account</a></li>
+                              <li><a href="#">My organizations</a></li>
+                              <li><a href="#">Liked posts</a></li>
+                              <li><a href="#">My posts</a></li>
+                              <li><a href="#">Tickets</a></li>
+                              <li><a href="#">Add</a></li>
+                              <li><a href="#">FAQ</a></li>
+                             </ul>
+                         </li>
                     </ul>
                 </div>
             </div>
@@ -92,7 +108,7 @@
 
                   <div class="event-item row">
                       <div class="event-photo col-md-4 col-xs-4">
-                          <img src="../imgs/ava.jpg" alt="">
+                          <img src="imgs/ava.jpg" alt="">
                       </div>
                       <div class="event-text col-md-8 col-xs-8">
                           <span class="event-header">SU Elections</span><br>
@@ -110,7 +126,7 @@
 
                   <div class="event-item row">
                       <div class="event-photo col-md-4 col-xs-4">
-                          <img src="../imgs/ava.jpg" alt="">
+                          <img src="imgs/ava.jpg" alt="">
                       </div>
                       <div class="event-text col-md-8 col-xs-8">
                           <span class="event-header">SU Elections</span><br>
@@ -129,7 +145,7 @@
 
                   <div class="event-item row">
                       <div class="event-photo col-md-4 col-xs-4">
-                          <img src="../imgs/ava.jpg" alt="">
+                          <img src="imgs/ava.jpg" alt="">
                       </div>
                       <div class="event-text col-md-8 col-xs-8">
                           <span class="event-header">SU Elections</span><br>
@@ -148,7 +164,7 @@
 
                   <div class="event-item row">
                       <div class="event-photo col-md-4 col-xs-4">
-                          <img src="../imgs/ava.jpg" alt="">
+                          <img src="imgs/ava.jpg" alt="">
                       </div>
                       <div class="event-text col-md-8 col-xs-8">
                           <span class="event-header">SU Elections</span><br>
@@ -167,7 +183,7 @@
 
                   <div class="event-item row">
                       <div class="event-photo col-md-4 col-xs-4">
-                          <img src="../imgs/ava.jpg" alt="">
+                          <img src="imgs/ava.jpg" alt="">
                       </div>
                       <div class="event-text col-md-8 col-xs-8">
                           <span class="event-header">SU Elections</span><br>
@@ -188,7 +204,7 @@
 
                   <div class="event-item row">
                       <div class="event-photo col-md-4 col-xs-4">
-                          <img src="../imgs/ava.jpg" alt="">
+                          <img src="imgs/ava.jpg" alt="">
                       </div>
                       <div class="event-text col-md-8 col-xs-8">
                           <span class="event-header">SU Elections</span><br>
@@ -209,7 +225,7 @@
 
                   <div class="event-item row">
                       <div class="event-photo col-md-4 col-xs-4">
-                          <img src="../imgs/ava.jpg" alt="">
+                          <img src="imgs/ava.jpg" alt="">
                       </div>
                       <div class="event-text col-md-8 col-xs-8">
                           <span class="event-header">SU Elections</span><br>
@@ -224,10 +240,10 @@
           </div>
     </section>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="../css/jquery.min.js"></script>
+    <script src="css/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="../css/bootstrap.min.js" type="text/javascript"></script>
+    <script src="css/bootstrap.min.js" type="text/javascript"></script>
     <!-- <script src="slick/slick.min.js"></script>    -->
-    <script src="../css/main.js" type="text/javascript"></script>
+    <script src="css/main.js" type="text/javascript"></script>
     <!--<a href="https://ru.freepik.com/free-vector/_801555.htm">Разработано через Freepik</a>-->
 </body>
