--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="ru-en">
 
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
@@ -47,7 +47,9 @@
                         <span class="icon-bar"></span>
                     </button>
                     <a class="navbar-brand" href="index.html">LAWN</a>
-                    <a class="myacc visible-xs" href="Account"><a href="login.html"><i class="fas fa-user-circle"></i></a></a>
+                    <a class="myacc visible-xs" href="login.html">
+                    <i class="fas fa-user-circle"></i>    
+                    </a>
                 </div>
                 <!-- Collect the nav links, forms, and other content for toggling -->
                 <div class="collapse navbar-collapse" id="navbarCollapse">
@@ -58,17 +60,17 @@
                             Home</a>
                         </li>
                         <li class="">
-                            <a data-toggle="tabs" href="edu.html">
+                            <a data-toggle="tabs" href="edu_schedule.html">
                             <i class="fas fa-graduation-cap"></i>
                             Education</a>
                         </li>
                         <li class="">
-                            <a data-toggle="tabs" href="WEB-INF/community.html">
+                            <a data-toggle="tabs" href="community.html">
                             <i class="fas fa-users"></i>
                             Community</a>
                         </li>
                         <li class="">
-                            <a data-toggle="tabs" href="WEB-INF/album.html">
+                            <a data-toggle="tabs" href="album.html">
                             <i class="fas fa-images"></i>
                             Album</a>
                         </li>
@@ -77,8 +79,8 @@
                             <i class="fas fa-user-circle"></i>
                             Sign In</a>
                         </li>
-                        <li class="dropdown open">
-                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="true">
+                        <li class="dropdown ">
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
                              <i class="fas fa-cog"></i>
                              Settings
                              <span class="caret"></span></a>
@@ -301,7 +303,7 @@ To apply, visit our website at <a href="https://alwiutmun.weebly.com">https://al
                         <i class="fas fa-ellipsis-v"></i>
                     </span>
                         <ul class="dropdown-menu dropdown-menu-right">
-                            <li><a href="#">Fuck you</a></li>
+                            <li><a href="#">Complain</a></li>
                             <li><a href="#">Edit</a></li>
                             <li><a href="#">Delete</a></li>
                         </ul>
