--- a/src/main/webapp/edu_schedule.html
+++ b/src/main/webapp/edu_schedule.html
@@ -22,8 +22,8 @@
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
-        <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
-        <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+        <script src="oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
+        <script src="oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
         <![endif]-->
 </head>
 
@@ -104,20 +104,27 @@
         <section class="blocks col-md-10 col-md-offset-1 tab-pane fade in active" id="schedule">
             <div class="block row">
                 <div class="container-fluid date firstdate1">Monday &#124; March 26</div>
-                <div class="explanation col-xs-12">
-                    <div class="urok u1">
-                        <a href="https://facebook.com">
+                <div class="explanation double-pair col-xs-12">
+                    <div class="urok u1 ">
+                        <a href="#">
                             <div class="ordles">1</div>
                             <div class="content-schedule">
                                 <h2>Algebra</h2>
                                 <p>8.30 - 9.50 <br> Room#52/62</p>
                             </div>
                         </a>
+                         <a href="#">
+                            <div class="ordles">1</div>
+                            <div class="content-schedule">
+                                <h2>Fizra</h2>
+                                <p>8.30 - 9.50 <br>GYM</p>
+                            </div>
+                        </a>
                     </div>
 
 
-                    <div class="urok u2">
-                        <a href="https://facebook.com">
+                    <div class="urok centered u2">
+                        <a href="#">
                             <div class="ordles">2</div>
                             <div class="content-schedule">
                                 <h2>Russian</h2>
@@ -126,8 +133,8 @@
                         </a>
 
                     </div>
-                    <div class="urok u3">
-                        <a href="https://facebook.com">
+                    <div class="urok centered u3">
+                        <a href="#">
                             <div class="ordles">3</div>
                             <div class="content-schedule">
                                 <h2>English-W</h2>
@@ -142,7 +149,7 @@
                 <div class="container-fluid date firstdate">Monday &#124; March 26</div>
                 <div class="explanation col-xs-12">
                     <div class="urok u1">
-                        <a href="https://facebook.com">
+                        <a href="#">
                             <div class="ordles">1</div>
                             <div class="content-schedule">
                                 <h2>Spanish</h2>
@@ -153,7 +160,7 @@
 
 
                     <div class="urok u2">
-                        <a href="https://facebook.com">
+                        <a href="#">
                             <div class="ordles">2</div>
                             <div class="content-schedule">
                                 <h2>Geometry</h2>
@@ -163,7 +170,7 @@
 
                     </div>
                     <div class="urok u3">
-                        <a href="https://facebook.com">
+                        <a href="#">
                             <div class="ordles">3</div>
                             <div class="content-schedule">
                                 <h2>Community</h2>
@@ -172,7 +179,7 @@
                         </a>
                     </div>
                     <div class="urok u4">
-                        <a href="https://facebook.com">
+                        <a href="#">
                             <div class="ordles">4</div>
                             <div class="content-schedule">
                                 <h2>Uzbek</h2>
@@ -186,7 +193,7 @@
                 <div class="container-fluid date firstdate">Monday &#124; March 26</div>
                 <div class="explanation col-xs-12">
                     <div class="urok u1">
-                        <a href="https://facebook.com">
+                        <a href="#">
                             <div class="ordles">1</div>
                             <div class="content-schedule">
                                 <h2>English-R</h2>
@@ -197,7 +204,7 @@
 
 
                     <div class="urok u2">
-                        <a href="https://facebook.com">
+                        <a href="#">
                             <div class="ordles">2</div>
                             <div class="content-schedule">
                                 <h2>Spanish</h2>
@@ -207,7 +214,7 @@
 
                     </div>
                     <div class="urok u3">
-                        <a href="https://facebook.com">
+                        <a href="#">
                             <div class="ordles">3</div>
                             <div class="content-schedule">
                                 <h2>IT</h2>
@@ -222,7 +229,7 @@
                 <div class="container-fluid date firstdate">Monday &#124; March 26</div>
                 <div class="explanation col-xs-12">
                     <div class="urok u1">
-                        <a href="https://facebook.com">
+                        <a href="#">
                             <div class="ordles">1</div>
                             <div class="content-schedule">
                                 <h2>Algebra</h2>
@@ -233,7 +240,7 @@
 
 
                     <div class="urok u2">
-                        <a href="https://facebook.com">
+                        <a href="#">
                             <div class="ordles">2</div>
                             <div class="content-schedule">
                                 <h2>Literature</h2>
@@ -243,7 +250,7 @@
 
                     </div>
                     <div class="urok u3">
-                        <a href="https://facebook.com">
+                        <a href="#">
                             <div class="ordles">3</div>
                             <div class="content-schedule">
                                 <h2>History</h2>
@@ -252,7 +259,7 @@
                         </a>
                     </div>
                     <div class="urok u4">
-                        <a href="https://facebook.com">
+                        <a href="#">
                             <div class="ordles">4</div>
                             <div class="content-schedule">
                                 <h2>Psychology</h2>
@@ -266,7 +273,7 @@
                 <div class="container-fluid date firstdate">Monday &#124; March 26</div>
                 <div class="explanation col-xs-12">
                     <div class="urok u1">
-                        <a href="https://facebook.com">
+                        <a href="#">
                             <div class="ordles">1</div>
                             <div class="content-schedule">
                                 <h2>English-G</h2>
@@ -277,7 +284,7 @@
 
 
                     <div class="urok u2">
-                        <a href="https://facebook.com">
+                        <a href="#">
                             <div class="ordles">2</div>
                             <div class="content-schedule">
                                 <h2>Geometry</h2>
@@ -287,7 +294,7 @@
 
                     </div>
                     <div class="urok u3">
-                        <a href="https://facebook.com">
+                        <a href="#">
                             <div class="ordles">3</div>
                             <div class="content-schedule">
                                 <h2>Astronomy</h2>
@@ -302,7 +309,7 @@
                 <div class="container-fluid date firstdate">Monday &#124; March 26</div>
                 <div class="explanation col-xs-12">
                     <div class="urok u1">
-                        <a href="https://facebook.com">
+                        <a href="#">
                             <div class="ordles">1</div>
                             <div class="content-schedule">
                                 <h2>Physics</h2>
@@ -313,7 +320,7 @@
 
 
                     <div class="urok u2">
-                        <a href="https://facebook.com">
+                        <a href="#">
                             <div class="ordles">2</div>
                             <div class="content-schedule">
                                 <h2>Army</h2>
@@ -323,7 +330,7 @@
 
                     </div>
                     <div class="urok u3">
-                        <a href="https://facebook.com">
+                        <a href="#">
                             <div class="ordles">3</div>
                             <div class="content-schedule">
                                 <h2>IT</h2>
@@ -357,7 +364,7 @@
 
     <!-- UI JS file -->
     <script src="css/photoswipe-ui-default.min.js"></script>
-    <!--<a href="https://ru.freepik.com/free-vector/_801555.htm">Разработано через Freepik</a>-->
+    <!--<a href="ru.freepik.com/free-vector/_801555.htm">Разработано через Freepik</a>-->
 </body>
 
 </html>
