--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -100,6 +100,41 @@
         </nav>
     </header>
 
+    <div class="pswp" tabindex="-1" role="dialog" aria-hidden="true">
+        <div class="pswp__bg"></div>
+        <div class="pswp__scroll-wrap">
+            <div class="pswp__container" style="transform: translate3d(0px, 0px, 0px);">
+                <div class="pswp__item" style="display: block; transform: translate3d(-403px, 0px, 0px);"></div>
+                <div class="pswp__item" style="transform: translate3d(0px, 0px, 0px);"><div class="pswp__zoom-wrap" style="transform: translate3d(0px, 140px, 0px) scale(1);"><img class="pswp__img pswp__img--placeholder" src="imgs/unn.jpg" style="width: 360px; height: 360px; display: none;"><img class="pswp__img" src="imgs/unn.jpg" style="display: block; width: 360px; height: 360px;"></div></div>
+                <div class="pswp__item" style="display: block; transform: translate3d(403px, 0px, 0px);"></div>
+            </div>
+            <div class="pswp__ui pswp__ui--fit pswp__ui--one-slide pswp__ui--hidden">
+                <div class="pswp__top-bar">
+                    <div class="pswp__counter">1 / 1</div>
+                    <button class="pswp__button pswp__button--close" title="Close (Esc)"></button>
+                    <button class="pswp__button pswp__button--share" title="Share"></button>
+                    <button class="pswp__button pswp__button--fs" title="Toggle fullscreen"></button>
+                    <button class="pswp__button pswp__button--zoom" title="Zoom in/out"></button>
+                    <div class="pswp__preloader">
+                        <div class="pswp__preloader__icn">
+                            <div class="pswp__preloader__cut">
+                                <div class="pswp__preloader__donut"></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="pswp__share-modal pswp__share-modal--hidden pswp__single-tap">
+                    <div class="pswp__share-tooltip"></div>
+                </div>
+                <button class="pswp__button pswp__button--arrow--left" title="Previous (arrow left)"></button>
+                <button class="pswp__button pswp__button--arrow--right" title="Next (arrow right)"></button>
+                <div class="pswp__caption">
+                    <div class="pswp__caption__center">Image caption 3</div>
+                </div>
+            </div>
+        </div>
+    </div>
+
 
     <section class="newssection container-fluid">
         <div class="feed col-sm-10 col-sm-offset-1 col-md-6 col-md-offset-3 col-xs-12 col-lg-6 col-lg-offset-3 padd visible-xs visible-sm visible-md">
@@ -233,51 +268,21 @@
  Academic Lyceum of Westminster International University in Tashkent [ALWIUT] is glad to announce that Model United Nations Conference Extended will be held on the 19th of May. If you study at any lyceum, college or a 10th grader at school and are eager to develop your public speaking, leadership, critical thinking, political outlook, make friends with like-minded youth, become a delegate! Present a country, defend its policy and resolve global issues with ALWIUT MUN!
 To apply, visit our website at <a href="https://alwiutmun.weebly.com">https://alwiutmun.weebly.com</a>
                 </div>
+
+
+
                 <div class="row onephotorow">
                     <div class="my-gallery" itemscope itemtype="">
+
                         <figure itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
                             <a href="imgs/unn.jpg" itemprop="contentUrl" data-size="640x640">
-
-                                    <img src="imgs/unn.jpg" itemprop="thumbnail" alt="Image description" />
-
+                                <img src="imgs/unn.jpg" itemprop="thumbnail" alt="Image description" />
                             </a>
                             <figcaption itemprop="caption description">Image caption 3</figcaption>
                         </figure>
+
                     </div>
-                    <div class="pswp" tabindex="-1" role="dialog" aria-hidden="true">
-                        <div class="pswp__bg"></div>
-                        <div class="pswp__scroll-wrap">
-                            <div class="pswp__container">
-                                <div class="pswp__item"></div>
-                                <div class="pswp__item"></div>
-                                <div class="pswp__item"></div>
-                            </div>
-                            <div class="pswp__ui pswp__ui--hidden">
-                                <div class="pswp__top-bar">
-                                    <div class="pswp__counter"></div>
-                                    <button class="pswp__button pswp__button--close" title="Close (Esc)"></button>
-                                    <button class="pswp__button pswp__button--share" title="Share"></button>
-                                    <button class="pswp__button pswp__button--fs" title="Toggle fullscreen"></button>
-                                    <button class="pswp__button pswp__button--zoom" title="Zoom in/out"></button>
-                                    <div class="pswp__preloader">
-                                        <div class="pswp__preloader__icn">
-                                            <div class="pswp__preloader__cut">
-                                                <div class="pswp__preloader__donut"></div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="pswp__share-modal pswp__share-modal--hidden pswp__single-tap">
-                                    <div class="pswp__share-tooltip"></div>
-                                </div>
-                                <button class="pswp__button pswp__button--arrow--left" title="Previous (arrow left)"></button>
-                                <button class="pswp__button pswp__button--arrow--right" title="Next (arrow right)"></button>
-                                <div class="pswp__caption">
-                                    <div class="pswp__caption__center"></div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
+
                 </div>
                 <div class="likes">
                     <button type="button" class="btn counter"><i class="far fa-heart fa-2x like"></i><span class="likeCount">1222</span></button>
@@ -285,6 +290,15 @@ To apply, visit our website at <a href="https://alwiutmun.weebly.com">https://al
                 </div>
 
             </div>
+
+
+
+
+
+
+
+
+
             <!-- mesto flya vzloma -->
             <div class="news" width="100%">
                 <div class="newsbegin col-xs-12">
@@ -314,98 +328,35 @@ To apply, visit our website at <a href="https://alwiutmun.weebly.com">https://al
                     <a href="https://goo.gl/UjmxLe">https://goo.gl/UjmxLe</a>
                     <br>
                 </div>
+
+
+
                 <div class="row twophotosrow">
                     <div class="my-gallery" itemscope itemtype="">
-
-
-
                         <figure itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
                             <!-- <div class="wrapperThumb"> -->
-
                             <a href="imgs/doing.png" itemprop="contentUrl" data-size="635x353">
+                                <img src="imgs/doing.png" itemprop="thumbnail" alt="Image description" />
 
-                        <img src="imgs/doing.png" itemprop="thumbnail" alt="Image description" />
-
-                  </a>
+                            </a>
                             <!-- </div> -->
                             <figcaption itemprop="caption description">Image caption 3</figcaption>
                         </figure>
 
                         <figure itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
                             <a href="imgs/sv.png" itemprop="contentUrl" data-size="640x640">
-                      <img src="imgs/sv.png" itemprop="thumbnail" alt="Image description" />
-                  </a>
+                                <img src="imgs/sv.png" itemprop="thumbnail" alt="Image description" />
+                            </a>
                             <figcaption itemprop="caption description">Image caption 4</figcaption>
                         </figure>
                     </div>
 
-
-
-
-
-                    <div class="pswp" tabindex="-1" role="dialog" aria-hidden="true">
-
-                        <div class="pswp__bg"></div>
-
-                        <div class="pswp__scroll-wrap">
-
-                            <div class="pswp__container">
-                                <div class="pswp__item"></div>
-                                <div class="pswp__item"></div>
-                                <div class="pswp__item"></div>
-                            </div>
-
-                            <div class="pswp__ui pswp__ui--hidden">
-
-                                <div class="pswp__top-bar">
-
-
-                                    <div class="pswp__counter"></div>
-
-                                    <button class="pswp__button pswp__button--close" title="Close (Esc)"></button>
-
-                                    <button class="pswp__button pswp__button--share" title="Share"></button>
-
-                                    <button class="pswp__button pswp__button--fs" title="Toggle fullscreen"></button>
-
-                                    <button class="pswp__button pswp__button--zoom" title="Zoom in/out"></button>
-
-
-                                    <div class="pswp__preloader">
-                                        <div class="pswp__preloader__icn">
-                                            <div class="pswp__preloader__cut">
-                                                <div class="pswp__preloader__donut"></div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-
-                                <div class="pswp__share-modal pswp__share-modal--hidden pswp__single-tap">
-                                    <div class="pswp__share-tooltip"></div>
-                                </div>
-
-                                <button class="pswp__button pswp__button--arrow--left" title="Previous (arrow left)">
-                        </button>
-
-                                <button class="pswp__button pswp__button--arrow--right" title="Next (arrow right)">
-                        </button>
-
-                                <div class="pswp__caption">
-                                    <div class="pswp__caption__center"></div>
-                                </div>
-
-                            </div>
-
-                        </div>
-
-                    </div>
                 </div>
                 <div class="likes">
                     <button type="button" class="btn counter"><i class="far fa-heart fa-2x like"></i><span class="likeCount">78</span></button>
                     <button type="button" class="btn"><i class="fas fa-share fa-2x"></i></button>
                 </div>
             </div>
-
 
 
             <div class="news" width="100%">
@@ -466,40 +417,7 @@ To apply, visit our website at <a href="https://alwiutmun.weebly.com">https://al
                                     <figcaption itemprop="caption description">Image caption 3</figcaption>
                                 </figure>
                             </div>
-                            <div class="pswp" tabindex="-1" role="dialog" aria-hidden="true">
-                                <div class="pswp__bg"></div>
-                                <div class="pswp__scroll-wrap">
-                                    <div class="pswp__container">
-                                        <div class="pswp__item"></div>
-                                        <div class="pswp__item"></div>
-                                        <div class="pswp__item"></div>
-                                    </div>
-                                    <div class="pswp__ui pswp__ui--hidden">
-                                        <div class="pswp__top-bar">
-                                            <div class="pswp__counter"></div>
-                                            <button class="pswp__button pswp__button--close" title="Close (Esc)"></button>
-                                            <button class="pswp__button pswp__button--share" title="Share"></button>
-                                            <button class="pswp__button pswp__button--fs" title="Toggle fullscreen"></button>
-                                            <button class="pswp__button pswp__button--zoom" title="Zoom in/out"></button>
-                                            <div class="pswp__preloader">
-                                                <div class="pswp__preloader__icn">
-                                                    <div class="pswp__preloader__cut">
-                                                        <div class="pswp__preloader__donut"></div>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <div class="pswp__share-modal pswp__share-modal--hidden pswp__single-tap">
-                                            <div class="pswp__share-tooltip"></div>
-                                        </div>
-                                        <button class="pswp__button pswp__button--arrow--left" title="Previous (arrow left)"></button>
-                                        <button class="pswp__button pswp__button--arrow--right" title="Next (arrow right)"></button>
-                                        <div class="pswp__caption">
-                                            <div class="pswp__caption__center"></div>
-                                        </div>
-                                    </div>
-                                </div>
-                        </div>
+
                 </div>
                  <div class="likes">
                     <button type="button" class="btn counter"><i class="far fa-heart fa-2x like"></i><span class="likeCount">78</span></button>
