First implementation of image scaling mechanism  - all images are first transformed into jpg  - then compressed with no quality loss  - a thumbnail with a square thumbnail are created  - 3 images are saved in total
Made one common entity AttachedAlbum for usage in HW and Posts

Major changes in mappings
 - many-to-many association owner SHOULD NOT have "inverse" attribute

Started working on Resources section in Education
 - created classes ResourceItem and SubjectResourceCategory

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -100,6 +100,7 @@
         </nav>
     </header>
 
+    <!--<gallery>-->
     <div class="pswp" tabindex="-1" role="dialog" aria-hidden="true">
         <div class="pswp__bg"></div>
         <div class="pswp__scroll-wrap">
