--- a/src/main/webapp/upload.html
+++ b/src/main/webapp/upload.html
@@ -5,7 +5,7 @@
         <title>Title</title>
     </head>
     <body>
-        <form id='file-catcher'>
+        <form id='file-catcher' enctype="multipart/form-data">
             <input id="post-text" type="text" name="postContent">
             <input id='file-input' type='file' multiple/>
             <button type='submit'>
